--- a/views/scanner.ejs
+++ b/views/scanner.ejs
@@ -53,9 +53,9 @@
     }
 
     if (t == true) {
-      let url = "http://localhost:3000/dashboard?id=" + q;
+      let url = "https://z0waste.herokuapp.com/dashboard?id=" + q;
       httpGet(url);
-      document.location.href = "http://localhost:3000/dashboard";
+      document.location.href = "https://z0waste.herokuapp.com/dashboard";
       
 
 
